--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /.idea/modules.xml
 /.idea/PracticingSkills.iml
 /.idea/vcs.xml
+/CodeWars/.idea/.gitignore
+/CodeWars/.idea/CodeWars.iml
+/CodeWars/.idea/modules.xml
+/.idea/Practicing-Skills.iml
+/CodeWars/.idea/vcs.xml
